Have incorporated css style rule to change the text for each of the ticks on the x-axis of the bar charts, so that they are displayed at 45 degree angle, to stop them overlapping

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,18 +19,18 @@
 
 .title-bar {
     min-height: 50px;
-    background-color: #0e7a0d;
+    background-color: #003791;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
     align-items: center;
-    border-bottom: 1px solid #0e7a0d;
-    color: #000000;
+    border-bottom: 1px solid #003791;
+    color: #ffffff;
     padding-bottom: 10px;
 }
 
 .title {
-    color: #000000;
+    color: #ffffff;
     text-decoration: none;
     font-size: 25px;
     margin: 10px 20px;
@@ -58,8 +58,8 @@
 .footer {
     min-height: 50px;
     margin-top: 10px;
-    background-color: #0e7a0d;
-    color: #000000;
+    background-color: #003791;
+    color: #ffffff;
     justify-content: space-around;
     position: relative;
 }
@@ -81,7 +81,7 @@
 
 .github-logo:focus,
 .github-logo:hover {
-    color: #0e7a0d;
+    color: #003791;
 }
 
 .kaggle-logo {
@@ -92,3 +92,24 @@
 .kaggle-logo:hover {
     opacity: 0.8;
 }
+
+/*--- Bar Charts Axis Text ---*/
+/* help with the code below was taken from https://github.com/dc-js/dc.js/issues/731 - (davisford commented on 18 Oct 2014) */
+#publisher-global-sales .x.axis text,
+#genre-global-sales .x.axis text,
+#north-america-genre-sales .x.axis text,
+#europe-genre-sales .x.axis text,
+#rest-of-world-genre-sales .x.axis text{
+    text-anchor: end !important;
+    transform: rotate(-45deg);
+}
+
+/*--- Bar Charts Axis Labels ---*/
+#publisher-global-sales .x.axis label,
+#north-america-genre-sales .x.axis label,
+#europe-genre-sales .x.axis label,
+#rest-of-world-genre-sales .x.axis label{
+    transform: translateX(50px);
+}
+
+
